# Emotion-recognition-from-speech

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
backend/: app.py
frontend/: index.html
models/: best_model.pt
notebooks/: 01_data_exploration.ipynb  02_feature_extraction.ipynb  03_evaluation.ipynb
results/reports/: classification_report.csv  misclassified_samples.csv
src/: __init__.py  augmentation.py  config.py  data_parser.py  dataset.py  evaluate.py  feature_extraction.py  model.py  predict.py  train.py
tests/: test_data_parser.py
